Refactor worker properties update/report events
Reworked worker property observation to use two explicit events: `platform.worker.properties.updated` (merge keys) and `platform.worker.properties.replaced` (full replacement). Payloads are now direct string KV maps, removing the old `{properties}` / `{set,remove}` wrapper contract and patch-removal semantics.

Updated worker-core, Java/Android worker APIs, Netty adapter connection/cache handling, and related tests/docs so snapshot-triggered baselines publish `replaced`, incremental reports publish `updated`, and ordinary TASK/SERVER snapshot results no longer mutate the adapter cache.